Finished simple form

--- a/index.html
+++ b/index.html
@@ -2,9 +2,24 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>HTML Checkpoint</title>
   </head>
   <body>
-
+    <form>
+      Email:<br>
+      <input type="email" name="email"><br>
+      Password:<br>
+      <input type="password" name="pass"><br>
+      GitHub Username:<br>
+      <input type="text" name="gitHubName">
+      <label for="Enterprise">Enterprise</label>
+      <input type="radio" name="opts" value="Enterprise" id ="Enterprise">
+      <label for="Pro">Pro</label>
+      <input type="radio" name="opts" value="Pro" id= "Pro">
+      <label for="Free">Free</label>
+      <input type="radio" name="opts" value="Free" id= "Free"><br>
+      <label for="remember">Remember Me</label>
+      <input type="checkbox" name="remember" id="remember">
+    </form>
   </body>
 </html>
